Introduce CheckoutType in API and replace UseNewCheckout in backend
