# BTCPayServer/Controllers/GreenField/GreenfieldAppsController.cs
@@ -164,7 +164,8 @@ namespace BTCPayServer.Controllers.Greenfield
                 EmbeddedCSS = request.EmbeddedCSS,
                 RedirectAutomatically = request.RedirectAutomatically,
                 RequiresRefundEmail = BoolToRequiresRefundEmail(request.RequiresRefundEmail) ?? RequiresRefundEmail.InheritFromStore,
-                CheckoutFormId = request.CheckoutFormId
+                CheckoutFormId = request.CheckoutFormId,
+                CheckoutType = request.CheckoutType ?? CheckoutType.V1
             };
         }
 
