# BTCPayServer/Models/InvoiceResponse.cs
@@ -1,7 +1,9 @@
 using System;
 using System.Collections.Generic;
+using BTCPayServer.Client.Models;
 using BTCPayServer.Services.Invoices;
 using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
 using Newtonsoft.Json.Linq;
 
 namespace BTCPayServer.Models
@@ -269,6 +271,8 @@ namespace BTCPayServer.Models
 
         [JsonProperty("checkoutFormId")]
         public string CheckoutFormId { get; set; }
+        [JsonConverter(typeof(StringEnumConverter))]
+        public CheckoutType? CheckoutType { get; set; }
     }
     public class Flags
     {
